--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.android.support:support-v4:21.0.3'
+    compile 'com.squareup.picasso:picasso:2.4.0'
+    compile 'com.squareup.retrofit:retrofit:1.5.0'
+    compile 'com.squareup.dagger:dagger:1.1.0'
+    compile 'com.jakewharton:butterknife:5.0.0'
 }
